--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
           <p>they/them/thiers<em><br>Designer, Creator, Artist</em></p>
           <p>I am on a path to discover what i am destined to do in this life.🌞</p></td>
         </tr>
+        <h1>Social Media</h1>
+        <ul>
+          <li><a href="https://www.instagram.com/interdreamensional/">Instagram</a></li>
+          <li><a href="https://interdreamensional.tumblr.com/">Tumblr blog</a></li>
+        </ul>
     </table>
     
     <hr>
