--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
         <td><img src="Images/Selfportrait.jpg" alt="stylized profile picture"></td>
         <td><h1>Annik / Dorian Solaris</h1>
           <p>they/them/thiers<em><br>Designer, Creator, Artist</em></p>
-          <p>I am on a path to discover what i am destined to do in this life.🌞</p></td>
-          <h1>Social Media</h1>
+          <p>I am on a path to discover what i am destined to do in this life.🌞</p>
+          <h3>Social Media</h3>
         <ul>
           <li><a href="https://www.instagram.com/interdreamensional/">Instagram</a></li>
           <li><a href="https://interdreamensional.tumblr.com/">Tumblr blog</a></li>
         </ul>
+      </td>
         </tr>
     </table>
     
