--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Mx.Solaris</title> 
+    <title>Annik</title> 
   </head>
   <!--website body -->
   <body>
     <table cellspacing="20">
       <tr>
         <td><img src="Images/Selfportrait.jpg" alt="stylized profile picture"></td>
-        <td><h1>Annik / Dorian Solaris</h1>
+        <td><h1>Annik </h1>
           <p>they/them/thiers<em><br>Designer, Creator, Artist</em></p>
           <p>I am on a path to discover what i am destined to do in this life.🌞</p>
           <h3>Social Media</h3>
